# X4FT

./: .gitignore  README.md  config.example.json  extraction_log.txt  pyproject.toml  requirements.txt  test_equipment.py
scripts/: analyze_data_quality.py  check_par_equipment.py  create_config.py  extract_game_data.py  run_gui.py  test_nemesis_stats.py  verify_extraction.py
scripts/csv/: consumables.csv  engines.csv  export_consumables_csv.py  export_engines_csv.py  export_shields_csv.py  export_ships_csv.py  export_thrusters_csv.py  export_weapons_csv.py  shields.csv  ships.csv  thrusters.csv  weapons.csv
src/x4ft/: __init__.py
src/x4ft/config/: __init__.py  settings.py
src/x4ft/core/: __init__.py  fitting_manager.py
src/x4ft/database/: connection.py  schema.py
src/x4ft/extraction/: __init__.py  catalog_extractor.py  equipmentmods_parser.py  extraction_manager.py  xml_diff_applicator.py
src/x4ft/gui/: __init__.py  extraction_dialog.py  main_window.py
src/x4ft/gui/widgets/: __init__.py  consumables_panel.py  cost_panel.py  crew_panel.py  equipment_slots_panel.py  fitting_main_widget.py  modifications_panel.py  ship_info_panel.py  ship_list_widget.py  software_panel.py  stats_panel.py
src/x4ft/models/: __init__.py
src/x4ft/parsers/: __init__.py  base_parser.py  bullet_parser.py  engine_parser.py  macro_index_parser.py  shield_parser.py  ship_parser.py  text_resolver.py  thruster_parser.py  validation.py  wares_parser.py  weapon_parser.py
src/x4ft/utils/: game_detector.py  logger.py
