[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x4ft"
version = "0.1.0"
description = "X4 Foundations Fitting Tool - Data Extraction System"
requires-python = ">=3.9"
dependencies = [
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
